# py-resample-pdf

./: .gitignore  README.md  pyproject.toml  requirements.txt
pdf_resampler/: __init__.py  cli.py  core.py  exceptions.py
